[gd_scene load_steps=8 format=3 uid="uid://cdjtceaei2wte"]

[ext_resource type="Shader" path="res://Outline.gdshader" id="1_3qnte"]
[ext_resource type="Script" path="res://scripts/stone.gd" id="1_gsvjo"]
[ext_resource type="Texture2D" uid="uid://cobxrfi24n2vk" path="res://Free Version/Spritesheet/Objects - Grassland/Rock.png" id="3_5up87"]
[ext_resource type="AudioStream" uid="uid://76ac1uwp60y3" path="res://audio/Break.mp3" id="3_gb546"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6404"]
size = Vector2(14, 13)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m4fil"]
shader = ExtResource("1_3qnte")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="CircleShape2D" id="CircleShape2D_eoa8a"]
radius = 27.0

[node name="Stone" type="Node2D"]
scale = Vector2(0.68, 0.68)
script = ExtResource("1_gsvjo")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_s6404")

[node name="Rock" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_m4fil")
position = Vector2(1, -1)
scale = Vector2(1.4525, 1.4525)
texture = ExtResource("3_5up87")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_eoa8a")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -12.0
offset_top = -14.0
offset_right = 12.0
offset_bottom = -10.0
max_value = 20.0
rounded = true
show_percentage = false

[node name="BreakAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_gb546")
pitch_scale = 1.16

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
